--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,9 @@ sourceCompatibility = '17'
 repositories {
     mavenCentral()
 }
-
+jar {
+    enabled = false
+}
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
